--- a/grandparents.html
+++ b/grandparents.html
@@ -109,7 +109,8 @@
         <p>外公陳凌生於1914年廣東廣州黃埔軍校北面的新州，家裡估計是農民，不識字,有兩位妹妹，其中一位於戰時喪生，聽外婆說我媽長得像她。外公早年來香港謀生（當時香港並不發達，想來不需要任何手續），職業為開船，運載草魚等來往佛山順德容奇港及香港。他為人仗義，經常幫助別人，雖然不富裕但也經常借錢給人，所以在容奇人脈甚廣，認識不少官員。葬禮的時候好些容奇官員送行（當時香港還沒開放自由行，想來必須以探親為由）。順德清暉園還沒對遊客開放時，通過人脈關係外公帶過家人遊覽。	</p>
 	</p>
 
-	<p>	外公有兩段婚姻，原配郭妹在我出身前已經過世，後來娶了何金，一共四名子女。外公年輕時長得俊肖，聽說還有些風流史。文革的時候，由於外公經常往返大陸，遭到批鬥，不過具體遭遇不詳。	</p>
+	<p>	外公有兩段婚姻，原配郭妹在我出身前已經過世，後來娶了何金，一共四名子女。外公年輕時長得俊肖，有風流史。在郭妹沒去世時，據說他每次開船到大陸，在廣州必定找一名叫“十姨”的女士，有次郭妹背着當時可能兩三歲的姨母上去攔截。後來郭妹去世，由於他妹妹強烈反對，給他找了何金當繼室。關於他開船的職業，這使得二戰期間家裡還有米吃。</p>
+    <p>   文革的時候，由於外公經常往返大陸，遭到批鬥，不過具體遭遇不詳。	</p>
 	  
 	 <p>70年代一家人搬去公屋，雖然住的樓房，外公家經常打開門，不怕有陌生人近來，並且說：“有人想來就邀請進來坐。”  </p>
 
@@ -119,7 +120,8 @@
 	
 	<p> 外公於2000年於醫院平靜離世，終年86歲。 </p>
 	<p><b><i>	何外婆</p></b></i>
-	何金外婆，生於1921年。外公原配去世後大概經過別人介紹嫁來香港（當時嫁來香港和現在觀念完全不一樣）。結婚後，除了照顧自己的孩子還幫別人帶孩子。後來，香港輕工業發展了，外婆60多歲都在穿”膠花“（塑料花)。外公外婆在世時，週末經常去他們家裡吃飯。外婆知道我喜歡吃魚頭，每次都做給我吃。有年中秋，她和我哥下樓買了很多燈籠給每個孫子。她還買過項鍊，粉紅色羽毛扇子給我（這個我一直留著，參見<a href="picture.html" target="_blank">《老照片》</a>）。
+	何金外婆，生於1921年。外公原配去世後大概經過別人介紹嫁來香港（當時嫁來香港和現在觀念完全不一樣）。結婚後，除了照顧自己的孩子還幫別人帶孩子。那個年代，一個房子分很多家，大家共用廚房廁所，很多時候有是非，不過外婆從來不在背後說別人。<br><br>
+       後來，香港輕工業發展了，外婆60多歲都在穿”膠花“（塑料花)。外公外婆在世時，週末經常去他們家裡吃飯。外婆知道我喜歡吃魚頭，每次都做給我吃。有年中秋，她和我哥下樓買了很多燈籠給每個孫子。她還買過項鍊，粉紅色羽毛扇子給我（這個我一直留著，參見<a href="picture.html" target="_blank">《老照片》</a>）。
 
 
 	<p>	上面提到，外公年輕時俊肖。以前經常聽到外婆抱怨外公去“燙衫”（用電熨斗燙衣服），意思是去找女人。其實當時外公都過70了，沒錢也沒外貌，兒女們都知道不可能。不過我想外公年輕時確實有過風流史，令外婆很不滿，所以即使年老了也放不下。</p>
